@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-21T08:00:47Z",
-  "count_outdated" : 70,
-  "uniques_outdated" : 53,
+  "timestamp" : "2024-01-22T16:00:56Z",
+  "count_outdated" : 71,
+  "uniques_outdated" : 54,
   "count" : 73,
   "uniques" : 56,
   "clones" : [
-    {
-      "timestamp": "2024-01-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-11T00:00:00Z",
       "count": 1,
